Fixes thumbnails in annotation carousel. The previous fix would stretch. This leaves inconsistently sized thumbnail containers but does not transform the images.

--- a/webapp/WEB-INF/base/emfrontend/components/annotations/ajax/css/annotations.css
+++ b/webapp/WEB-INF/base/emfrontend/components/annotations/ajax/css/annotations.css
@@ -206,7 +206,7 @@ Below css from old highlights.css
   height: 77px;
   padding: 0;
   display: block;
-  width: 111px;
+  /* width: 111px; */
   float:  right;
   margin-right: 10px;
   margin-top: -7px;
